fixed styles on safari desktop

--- a/app/assets/stylesheets/components/modal.css
+++ b/app/assets/stylesheets/components/modal.css
@@ -13,6 +13,7 @@
 .modal-box {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: white;
   box-shadow: 0px 0px 5px red;
   border-radius: 16px;
